src/tests/snapshots/amber__tests__parsing__sub_int_expression.ab.snap
---
source: src/tests/parsing.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Raw(
                                        RawFragment {
                                            value: "21",
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "7",
                                        },
                                    ),
                                ),
                                op: Sub,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "2",
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "1",
                                                    },
                                                ),
                                            ),
                                            op: Sub,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "3",
                                        },
                                    ),
                                ),
                                op: Sub,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Arithmetic(
                                                    ArithmeticFragment {
                                                        left: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "1",
                                                                },
                                                            ),
                                                        ),
                                                        right: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "3",
                                                                },
                                                            ),
                                                        ),
                                                        op: Sub,
                                                        quoted: true,
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "2",
                                                    },
                                                ),
                                            ),
                                            op: Sub,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "12",
                                        },
                                    ),
                                ),
                                op: Sub,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
